move path to ynl

--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -5,12 +5,14 @@
 
 trigger:
 - master
+- staging
+- dev
 
 pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  projects: '**/**/*.csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
@@ -23,12 +25,8 @@ steps:
 
 - task: VSBuild@1
   inputs:
-    solution: '$(solution)'
+    projects: '$(projects)'
     msbuildArgs: '/p:DeployOnBuild=false'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
