--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -21,7 +21,6 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
-    name: '' 
     command: 'restore'
     projects: '**/**/*.csproj'
     workingDirectory: '.net./src'
@@ -49,3 +48,23 @@ steps:
     msbuildArchitecture: 'x64'
     platform: 'Any CPU'
     configuration: 'Debug'
+
+- task: DotNetCoreCLI@2
+  displayName: "dotnet pack"
+  inputs:
+    command: 'pack'
+    arguments: '--configuration $(buildConfiguration)'
+    packagesToPack: '**/**/DevSkill.SSLCommerz.Core/DevSkill.SSLCommerz.Core.csproj'
+    nobuild: true
+    versioningScheme: 'off'
+
+- task: NuGetCommand@2
+  displayName: 'nuget push'
+  inputs:
+    command: 'push'
+    feedsToUse: 'select'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    nuGetFeedType: 'external'
+    publishVstsFeed: 'DevSkill.SSLCommerz.Core'
+    versioningScheme: 'off'
+    allowPackageConflicts: true
