Set GeneratePackageOnBuild to true

--- a/.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/DevSkill.SSLCommerz.Core.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/DevSkill.SSLCommerz.Core.csproj
@@ -8,6 +8,7 @@
 		<LangVersion Condition="'$(TargetFramework)'=='netstandard2.1'">
 			8.0
 		</LangVersion>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
