--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -53,6 +53,7 @@ steps:
     msbuildArchitecture: 'x64'
     platform: 'Any CPU'
     configuration: 'Debug'
+    workingDirectory: '.net/src'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet pack DevSkill.SSLCommerz.Core'
