--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -54,21 +54,12 @@ steps:
     platform: 'Any CPU'
     configuration: 'Debug'
 
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet pack'
-  inputs:
-    command: 'pack'
-    arguments: '-c $(buildConfiguration)'
-    nobuild: true
-    versioningScheme: 'off'
-    workingDirectory: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core'
-
 - task: NuGetCommand@2
   displayName: 'nuget push'
   inputs:
     command: 'push'
     feedsToUse: 'select'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.symbols.nupkg'
     nuGetFeedType: 'external'
     publishVstsFeed: 'DevSkill.SSLCommerz.Core'
     versioningScheme: 'off'
