Update azure-pipelines.yml for Azure Pipelines

--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -54,7 +54,7 @@ steps:
     solution: '**/*.sln'
     msbuildArchitecture: 'x64'
     platform: 'Any CPU'
-    configuration: 'Debug'
+    configuration: '$(buildConfiguration)'
 
 - task: NuGetCommand@2
   displayName: 'nuget push'
