--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -57,6 +57,20 @@ steps:
     configuration: '$(buildConfiguration)'
 
 - task: NuGetCommand@2
+  displayName: 'nuget setApiKey'
+  inputs:
+    command: 'custom'
+    arguments: 'setApiKey $(nugetCredential)'
+    feedsToUse: 'config'    
+    externalFeedCredentials: '$(externalFeedCredentials)' 
+    publishFeedCredentials: '$(publishFeedCredentials)'
+    packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.symbols.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: 'DevSkill.SSLCommerz.Core'
+    versioningScheme: 'off'
+    allowPackageConflicts: true
+
+- task: NuGetCommand@2
   displayName: 'nuget push'
   inputs:
     command: 'push'
