Update azure-pipelines.yml for Azure Pipelines

--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -61,14 +61,6 @@ steps:
   inputs:
     command: 'custom'
     arguments: 'setApiKey $(nugetCredential)'
-    feedsToUse: 'config'    
-    externalFeedCredentials: '$(externalFeedCredentials)' 
-    publishFeedCredentials: '$(publishFeedCredentials)'
-    packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.symbols.nupkg'
-    nuGetFeedType: 'internal'
-    publishVstsFeed: 'DevSkill.SSLCommerz.Core'
-    versioningScheme: 'off'
-    allowPackageConflicts: true
 
 - task: NuGetCommand@2
   displayName: 'nuget push'
@@ -76,9 +68,9 @@ steps:
     command: 'push'
     feedsToUse: 'config'    
     externalFeedCredentials: '$(externalFeedCredentials)' 
-    publishFeedCredentials: '$(publishFeedCredentials)'
+    publishFeedCredentials: '$(publishFeedCredentials)'    
     packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.symbols.nupkg'
-    nuGetFeedType: 'internal'
+    nuGetFeedType: 'external'
     publishVstsFeed: 'DevSkill.SSLCommerz.Core'
     versioningScheme: 'off'
     allowPackageConflicts: true
