--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -73,4 +73,4 @@ steps:
     publishVstsFeed: 'DevSkill.SSLCommerz.Core'
     versioningScheme: 'byEnvVar'
     versionEnvVar: '$(versionEnvVar)'
-    allowPackageConflicts: true
+    allowPackageConflicts: false
