--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -73,4 +73,4 @@ steps:
     nuGetFeedType: 'external'
     publishVstsFeed: 'DevSkill.SSLCommerz.Core'
     versioningScheme: 'off'
-    allowPackageConflicts: true
+    allowPackageConflicts: false
