--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -66,11 +66,11 @@ steps:
   displayName: 'nuget push'
   inputs:
     command: 'push'
-    arguments: '-SkipIfAlreadyPublished'
+    arguments: '-SkipIfAlreadyPublished -SkipDuplicate'
     feedsToUse: 'config'    
     externalFeedCredentials: '$(externalFeedCredentials)' 
     publishFeedCredentials: '$(publishFeedCredentials)'    
-    packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.symbols.nupkg'
+    packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.$(versionEnvVar).nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.$(versionEnvVar).symbols.nupkg'
     nuGetFeedType: 'external'
     publishVstsFeed: 'DevSkill.SSLCommerz.Core'
     versioningScheme: 'byEnvVar'
