Update azure-pipelines.yml for Azure Pipelines

--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -52,6 +52,7 @@ steps:
   displayName: 'msbuild *.csproj'
   inputs:
     solution: '**/*.sln'
+    msbuildArguments: '-t:Pack -p:PackageVersion=$(versionEnvVar)'
     msbuildArchitecture: 'x64'
     platform: 'Any CPU'
     configuration: '$(buildConfiguration)'
