--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -73,6 +73,6 @@ steps:
     packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.symbols.nupkg'
     nuGetFeedType: 'external'
     publishVstsFeed: 'DevSkill.SSLCommerz.Core'
-    versioningScheme: 'off'
+    versioningScheme: 'byBuildNumber'
     versionEnvVar: '$(versionEnvVar)'
     allowPackageConflicts: true
