--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -52,6 +52,7 @@ steps:
   displayName: 'msbuild *.csproj'
   inputs:
     solution: '**/*.sln'
+    msbuildArguments: '-t:Pack -p:PackageVersion=$(buildConfiguration).$(versionEnvVar)'    
     msbuildArchitecture: 'x64'
     platform: 'Any CPU'
     configuration: '$(buildConfiguration)'
@@ -73,6 +74,6 @@ steps:
     packagesToPush: '.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.nupkg;!.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/bin/Release/*.symbols.nupkg'
     nuGetFeedType: 'external'
     publishVstsFeed: 'DevSkill.SSLCommerz.Core'
-    versioningScheme: 'byBuildNumber'
+    versioningScheme: 'byEnvvar'
     versionEnvVar: '$(versionEnvVar)'
     allowPackageConflicts: true
