--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -49,7 +49,7 @@ steps:
     feedsToUse: 'select'
 
 - task: MSBuild@1
-  displayName: 'msbuild *.csproj release'
+  displayName: 'msbuild *.csproj dev'
   inputs:
     solution: '**/*.sln'
     msbuildArguments: '-t:Pack -p:PackageVersion=$(alphaVersionEnvVar)'    
@@ -59,7 +59,7 @@ steps:
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
 
 - task: MSBuild@1
-  displayName: 'msbuild *.csproj release'
+  displayName: 'msbuild *.csproj staging'
   inputs:
     solution: '**/*.sln'
     msbuildArguments: '-t:Pack -p:PackageVersion=$(stagingVersionEnvVar)'    
@@ -69,7 +69,7 @@ steps:
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/staging'))
 
 - task: MSBuild@1
-  displayName: 'msbuild *.csproj release'
+  displayName: 'msbuild *.csproj master'
   inputs:
     solution: '**/*.sln'
     msbuildArguments: '-t:Pack -p:PackageVersion=$(releaseVersionEnvVar)'    
@@ -85,7 +85,7 @@ steps:
     msbuildArchitecture: 'x64'
     platform: 'Any CPU'
     configuration: '$(buildConfiguration)'
-  condition: and(succeeded(), and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/pull')), eq(variables['Build.Reason'], 'PullRequest')
+  condition: and(eq(variables['Build.Reason'], 'PullRequest')
 
 - task: NuGetCommand@2
   displayName: 'nuget setApiKey'
@@ -107,3 +107,4 @@ steps:
     versioningScheme: 'byEnvVar'
     versionEnvVar: '$(versionEnvVar)'
     allowPackageConflicts: false
+  condition: and(neq(variables['Build.Reason'], 'PullRequest')
