--- a/.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/DevSkill.SSLCommerz.Core.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/DevSkill.SSLCommerz.Core.csproj
@@ -1,36 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;netstandard2.1;net45;net46;</TargetFrameworks>
-		<LangVersion Condition="'$(TargetFramework)'=='net45' Or '$(TargetFramework)'=='net46' Or '$(TargetFramework)'=='netstandard2.0'">
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net45;net46;</TargetFrameworks>
+    <LangVersion Condition="'$(TargetFramework)'=='net45' Or '$(TargetFramework)'=='net46' Or '$(TargetFramework)'=='netstandard2.0'">
 			7.3
 		</LangVersion>
-		<LangVersion Condition="'$(TargetFramework)'=='netstandard2.1'">
+    <LangVersion Condition="'$(TargetFramework)'=='netstandard2.1'">
 			8.0
 		</LangVersion>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Authors>Rafsanul Hasan</Authors>
-		<Company>Devskill</Company>
-		<Product>Devskill.SSLCommerz.Core</Product>
-		<PackageId>Devskill.SSLCommerz.Core</PackageId>
-		<PackageVersion>$(AssemblyVersion)</PackageVersion>
-		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-		<FileVersion>1.0.0.0</FileVersion>
-		<Version>$(AssemblyVersion)</Version>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="System.Net.Http" Version="4.3.4" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' Or '$(TargetFramework)'=='netstandard2.1'">
-		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-	</ItemGroup>
-
-	<ProjectExtensions><VisualStudio><UserProperties BuildVersion_BuildVersioningStyle="" BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2019/12/25" BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" /></VisualStudio></ProjectExtensions>
-
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Rafsanul Hasan</Authors>
+    <Company>Devskill</Company>
+    <Product>Devskill.SSLCommerz.Core</Product>
+    <PackageId>Devskill.SSLCommerz.Core</PackageId>
+    <PackageVersion>$(Version)</PackageVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
+    <Version>1.0.0.0-beta2</Version>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' Or '$(TargetFramework)'=='netstandard2.1'">
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties BuildVersion_BuildVersioningStyle="" BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2019/12/25" BuildVersion_UseUniversalClock="True" BuildVersion_UpdateAssemblyVersion="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
