--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -33,8 +33,8 @@ variables:
   isMerge: $[eq(variables.Build.Reason, 'merge')]
   isTargetStaging: $[eq(variables.system.pullRequest.targetBranch, 'staging')]
   isTargetProd: $[eq(variables.system.pullRequest.targetBranch, 'master')]
-  Version.Revision.Preview: $[counter(Version.Revision.Preview)]
-  Version.Revision.Prod: $[counter(Version.Revision.Prod)]
+  Version.Revision.Preview: $[counter(variables.Version.Revision.Preview)]
+  Version.Revision.Prod: $[counter(variables.Version.Revision.Prod)]
   srcBranch: $(Build.SourceBranch)
   isMergeDeployableInStaging: $[and(and(succeeded(), eq(variables.isMerge, true)),and(succeeded(), eq(srcBranch, 'refs/head/staging')))]
   isMergeDeployableInProd: $[and(and(succeeded(), eq(variables.isMerge, true)),and(succeeded(), eq(srcBranch, 'refs/head/master')))]
