--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -36,9 +36,9 @@ variables:
   Version.Revision.Preview: $[counter(variables.Version.Revision.Preview)]
   Version.Revision.Prod: $[counter(variables.Version.Revision.Prod)]
   srcBranch: $(variables.Build.SourceBranch)
-  isMergeDeployableInStaging: $[{and(and(succeeded(), eq(variables.isMerge, true)),and(succeeded(), eq(variables.srcBranch, 'refs/head/staging')))}]
-  isMergeDeployableInProd: $[{and(and(succeeded(), eq(variables.isMerge, true)),and(succeeded(), eq(variables.srcBranch, 'refs/head/master')))}]
-  isBuildable: $[{or(eq(variables.isPR, true), eq(variables.isMerge, true))}]
+  isMergeDeployableInStaging: $[and(and(succeeded(), eq(variables.isMerge, true)),and(succeeded(), eq(variables.srcBranch, 'refs/head/staging')))]
+  isMergeDeployableInProd: $[and(and(succeeded(), eq(variables.isMerge, true)),and(succeeded(), eq(variables.srcBranch, 'refs/head/master')))]
+  isBuildable: $[or(eq(variables.isPR, true), eq(variables.isMerge, true))]
 
 steps:
 
